src/styles/pages/details.scss
.details {

  .interpretation {
    margin: 5% 5%;
    text-align: justify;

    pre {
      font-family: 'Open Sans', 'Helvetica Neue', helvetica, sans-serif !important;
      font-style: italic;
      text-transform: capitalize;
      text-align: left;
    }

    .highlight {
      display: flex;
      flex-direction: row;
      justify-content: space-around;
      align-items: center;

      .tarot {
        flex: 1 1 50%;

        img {
          width: 100%;
          height: auto;
        }
      }

      .oracle {
        flex: 1 1 50%;
        font-style: italic;
        font-weight: 600;
        text-transform: capitalize;
        text-align: left;
      }
    }

    p {
      font-weight: lighter;
    }

    h3 {
      text-transform: uppercase;
    }
  }
}

